[package]
name = "hprobe"
version = "0.1.0"
authors = ["Oliver Daff <oliverdaff@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'