[package]
name = "hprobe"
version = "0.1.0"
description = "A async http probe utility."
keywords = ["http", "probe", "network", "cli"]
categories = ["command-line-utilities"]
authors = ["Oliver Daff <oliverdaff@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = true
homepage = "https://github.com/oliverdaff/hprobe"
repository = "https://github.com/oliverdaff/hprobe"


[dependencies]
clap = "2.33"
reqwest = { version = "0.10", default-features = false, features=["rustls-tls"]}
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"


[features]
default = []
async-dns = ["reqwest/trust-dns"]


[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'